<resources>
    <string name="app_name">HeroMe</string>
    <string name="shared_pref_file_name">drowsy.sleepless_entertainment.herome.PREFERENCE_FILE</string>
    <string name="custom_banner">custom_banner</string>
    <string name="hero_icons">hero_icons</string>
    <string name="came_by_accident">Came by accident</string>
    <string name="born_with_them">Born with them</string>
    <string name="choose_powers">CHOOSE POWERS</string>
    <string name="genetic_mutation">Genetic Mutation</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="superman_story">
        Superman is the sole survivor of the planet Krypton. His father, Jor-El, discovered that a nuclear chain reaction was building inside Krypton that would soon shatter the entire world. Jor-El launched Kal-El towards Earth in an experimental vessel for travel through hyperspace, moments before Krypton exploded. Superman was, in effect, born on Earth when the starcraft landed there. Jonathan and Martha Kent found the infant inside the vessel and brought him to their farm in Smallville, Kansas. Since he appeared entirely human, the Kents assumed that the baby was a victim of a cruel experiment. At this time the baby had no super powers. The Kents named the infant Clark and raised him as their own son.
    </string>
    <string name="ninja_turtle_story">
In 1969, a young boy was carrying four baby turtles home from the pet shop. A blind man was crossing the road when a truck labeled "T.C.R.I." almost ran him down. A young man behind the boy with the Turtles ran out to save the blind man, bumping the boy with the turtles and knocking the jar from his hands. The jar broke when it landed in the gutter, and the Turtles were washed down a sewer drainage grate. As the truck swerved, the back doors flew open. A container of green glowing goo fell out and was subsequently washed down the drain with the baby turtles. The turtles landed safely, until the jar of goo fell beside them, coating them with its contents.
    </string>
    <string name="thor_story">
Thor is one of several powerful ancient beings who dwell in a magical realm called Asgard. Through history, these beings have been revered and worshiped as gods. Ages ago, Odin, lord of the Asgardian gods, desired a child who would one day exceed him in power. Odin wooed Gaea, the earth goddess, and from their union Thor was born in a small cave in Norway on Earth. Odin took him to be raised in Asgard by his wife, Frigga. Thor grew in power and popularity and on his eighth birthday, Odin had the hammer Mjolnir created for him, enchanting it with powerful magic. Odin decreed that Mjolnir would be presented to Thor when his son had been proven a worthy warrior.
    </string>
    <string name="spiderman_story">
While attending a science exhibit, Peter is bitten by a spider that has accidentally received a dose of radioactivity. As a result, Peter acquires the agility and proportionate strength of an arachnid. He sews his own super hero uniform and uses his scientific knowledge to build mechanical devices that eject sticky webbing, but he is less interested in fighting crime than in making a buck. Disguised as Spider-Man, he becomes a professional wrestler and then demonstrates his abilities on television. He blithely ignores the chance to stop a fleeing thief, but his indifference ironically catches up with him when the same criminal later robs and kills Uncle Ben.
    </string>
    <string name="cyclops_story">
        Scott Summers was the first of two sons born to Major Christopher Summers, a test pilot for the U.S. Air Force, and his wife Katherine. Christopher was flying his family home from vacation when their plane was attacked by a spacecraft from the interstellar Shi\'ar Empire. To save their lives, Katherine pushed Scott and his brother Alex out of the plane with the only available parachute. Scott suffered a head injury upon landing, thus forever preventing him from controlling his mutant power by himself. With their parents presumed dead, the authorities separated the two boys. Alex was adopted, but Scott remained comatose in a hospital for a year. On recovering, he was placed in an orphanage in Omaha, Nebraska that was secretly controlled by his future enemy, the evil geneticist Mister Sinister.
    </string>
    <string name="hulk_story">
Supervising the trial of an experimental gamma bomb that he designed for the U.S. Defense Department at a nuclear research facility in New Mexico, Bruce selflessly rushed to the rescue of an ignorant teenager who had wandered onto the testing field as the countdown ticked inexorably toward zero. After shoving young Rick Jones to safety in a nearby ditch, Bruce was struck full-force by the bomb blast. He survived, but was irradiated by the deadly gamma energy. He began changing into the childlike green Hulk, thought to be triggered by the release of adrenaline when he was intensely excited, no matter what time of day. The green Hulk possesses little of Banner\'s memory and intelligence, and is easily enraged; making him a menace to society.
    </string>
    <string name="start_over">Start Over</string>
    <string name="secondary">Secondary</string>
    <string name="primary">Primary</string>
    <string name="backstory">Backstory</string>
    <string name="secondary_power">Secondary Power</string>
    <string name="hero_name">Hero Name</string>
    <string name="primary_power">Primary Power</string>
    <string name="hero_crest_image">hero_crest_image</string>
    <string name="pick_a_power">Pick A Power</string>
    <string name="turtle_power">Turtle Power</string>
    <string name="lightning">Lightning</string>
    <string name="flight">Flight</string>
    <string name="web_slinging">Web Slinging</string>
    <string name="laser_vision">Laser Vision</string>
    <string name="super_strength">Super Strength</string>
    <string name="show_backstory">SHOW BACKSTORY</string>
    <string name="how_did_you_get_your_powers">How did you get your powers?</string>
</resources>
