<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hero_bg_gradient"
    tools:context=".Fragments.BackstoryFragment">


    <ImageView
        android:id="@+id/heroCrestView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/hero_crest_image"
        android:src="@drawable/super_man_crest3x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/heroNameView" />

    <TextView
        android:id="@+id/heroNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/hero_name"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/backstoryView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/lorem_ipsum"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/primaryPowerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backstoryLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/primary_power"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/primaryPowerView"
        app:layout_constraintStart_toStartOf="@+id/primaryPowerView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/secondary_power"
        android:textColor="#FFFFFF"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/secondaryPowerView"
        app:layout_constraintStart_toStartOf="@+id/secondaryPowerView" />

    <TextView
        android:id="@+id/backstoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/backstory"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heroNameView" />

    <Button
        android:id="@+id/primaryPowerView"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/hero_button"
        android:drawableEnd="@drawable/item_selected"
        android:drawableStart="@drawable/supermancrest_icon"
        android:paddingEnd="8dp"
        android:paddingStart="10dp"
        android:text="@string/primary"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/secondaryPowerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/secondaryPowerView"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/hero_button"
        android:drawableEnd="@drawable/item_selected"
        android:drawableStart="@drawable/supermancrest_icon"
        android:paddingEnd="8dp"
        android:paddingStart="10dp"
        android:text="@string/secondary"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/nextFragmentBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nextFragmentBtn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/hero_button"
        android:backgroundTint="@color/colorAccent"
        android:paddingEnd="8dp"
        android:paddingStart="10dp"
        android:text="@string/start_over"
        android:textColor="@color/colorPrimary"
        android:textSize="19sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>